--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,9 @@ jobs:
           path: .cache
       - run: pip install mkdocs-material
       - run: pip install pillow cairosvg
-      - run: mkdocs gh-deploy --force
+      
+      - run: mkdocs build
+      
+      - run: cp CNAME site/
+      
+      - run: mkdocs gh-deploy --force --clean
