--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,5 +21,5 @@ jobs:
       - run: pip install pillow cairosvg
       - run: mkdocs build
       - name: Copy CNAME file
-        run: cp CNAME CNAME
+        run: cp CNAME /CNAME
       - run: mkdocs gh-deploy --force
